# rules_angular

./: MODULE.bazel  package.json  pnpm-lock.yaml
ng_package/bundle_types/: index.bzl
ng_package/packager/: BUILD.bazel
ng_package/rollup/: index.bzl  rollup.config.js  utils.bzl
setup/: extentions.bzl
src/ng_package/: index.bzl
src/ng_package/rollup/: index.bzl
src/ng_package/rollup_config/: BUILD.bazel  index.bzl
src/worker/: BUILD.bazel
test/app/: BUILD.bazel
