load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("//ng_package/rollup:index.bzl", "ng_package_rollup")

ts_project(
    name = "app",
    srcs = glob(["**/*.ts"]) + ["template.html"],
    supports_workers = 1,
    tsc_worker = "//worker:worker_angular",
    tsconfig = "tsconfig.json",
    deps = ["//:node_modules/@angular/core"],
)


ng_package_rollup(
    name = "bundle",
    srcs = [
        ":app",
    ],
)